# nu_plugin_from_dhall

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: check.yaml  publish.yaml  test.yaml
src/: from_dhall.rs  lib.rs  main.rs  plugin.rs
src/nu/: mod.rs
