[package]
name = "nu_plugin_from_dhall"
version = "0.1.0"
authors = ["Mika Naylor <mail@autophagy.io>"]
edition = "2018"
repository = "https://github.com/autophagy/nu_plugin_from_dhall"
description = "Nushell plugin to add Dhall support"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-errors = "~0"
nu-plugin = "~0"
nu-protocol = "~0"
nu-source = "~0"
nu-value-ext = "~0"
serde_dhall = "0.10.1"

