[package]
name = "nu_plugin_from_dhall"
version = "0.1.0"
edition = "2021"
authors = ["Mika Naylor <mail@autophagy.io>"]
repository = "https://github.com/autophagy/nu_plugin_from_dhall"
description = "Nushell plugin to add Dhall support"
license = "MIT"

[dependencies]
nu-plugin = "0.100.0"
nu-protocol = "0.100.0"
serde_dhall = "0.12.1"
